--- a/style.css
+++ b/style.css
@@ -9,8 +9,10 @@ body {
     color: #151414;
     font-size: 40px;
     font-weight: 700;
-    margin-top: 130px;
     margin-bottom: 50px;
+}
+.my-plans, .call-section{
+    margin-top: 130px;
 }
 
 /* header related styles */
@@ -64,8 +66,6 @@ main {
     margin: 0px auto;
 }
 
-
-
 /* about section related styles */
 .about {
     display: flex;
@@ -77,15 +77,15 @@ main {
 
 .profile-pic {
     width: 550px;
-    margin-top: -158px;
-    margin-left: 25px;
+    margin-top: -185px;
+    margin-left: 7px;
 }
 
 .about-image {
     background-color: rgba(241, 91, 34, 0.20);
     border-radius: 527.929px;
     width: 600px;
-    height: 555px;
+    height: 552px;
 }
 
 
@@ -117,4 +117,33 @@ main {
 .plan-items-container {
     display: flex;
     justify-content: space-between;
+}
+
+/* call section related styles */
+
+.call-section {
+    background-image: url('images/gradient2.png'), url('images/watch.png');
+    background-repeat: no-repeat;
+    padding: 35px 617px 59px 64px;
+    border-radius: 8px;
+    
+}
+
+.call-section-title {
+    color: #FFF;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.btn-secondary {
+    border-radius: 5px;
+    background: #FFF;
+    padding: 20px 36px;
+    color: #F15B22;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    border: 0;
+
 }
