--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
     font-size: 75px;
     font-weight: 700;
     width: 817px;
+    margin-left: 16px;
     margin-bottom: 24px;
 }
 
@@ -52,6 +53,7 @@ body {
     width: 818px;
     margin-bottom: 32px;
     margin-top: 0px;
+    margin-left: 15px;
 }
 
 .btn-primary {
@@ -98,6 +100,8 @@ main {
     color: #151414;
     font-size: 40px;
     font-weight: 700;
+    width: 271px;
+    margin-bottom: 24px;
 }
 
 .about-info-description {
@@ -105,6 +109,7 @@ main {
     font-size: 16px;
     font-weight: 400;
     width: 420px;
+    margin-bottom: 16px;
 }
 
 .about ul {
