--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
     background-image: url("images/banner/banner2.png");
     background-repeat: no-repeat;
-    height: 880px;
+    height: 100vh;
     background-size: cover;
 }
 
